--- a/C++ - Module 01/ex01/Makefile
+++ b/C++ - Module 01/ex01/Makefile
@@ -2,9 +2,9 @@ CC = c++
 
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 
-NAME = BraiiiiiiinnnzzzZ
+NAME = Moar_brainz
 
-SRC = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+SRC = main.cpp Zombie.cpp zombieHorde.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
