--- a/C++ - Module 00/ex01/Makefile
+++ b/C++ - Module 00/ex01/Makefile
@@ -1,6 +1,6 @@
-CC = c++
+CXX = c++
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 NAME = phonebook
 
@@ -9,7 +9,7 @@ FILES = PhoneBook.cpp Contact.cpp utils.cpp main.cpp
 FILES_O = $(FILES:.cpp=.o)
 
 $(NAME) : $(FILES_O)
-	$(CC) $(CFLAGS) $(FILES_O) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(FILES_O) -o $(NAME)
 
 clean : 
 	rm -f $(FILES_O)
