--- a/C++ - Module 01/ex00/Makefile
+++ b/C++ - Module 01/ex00/Makefile
@@ -1,19 +1,17 @@
-CC = c++
+CXXC = c++
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-NAME = BraiiiiiiinnnzzzZ
+FILES = Zombie.cpp main.cpp newZombie.cpp randomChump.cpp
 
-SRC = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+OBJ = $(FILES:.cpp=.o)
 
-OBJ = $(SRC:.cpp=.o)
+NAME = zombie
 
 $(NAME) : $(OBJ)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJ)
+	$(CXXC) $(OBJ) -o $(NAME)
 
-all : fclean 
-
-clean :
+clean : 
 	rm -f $(OBJ)
 
 fclean : clean
