--- a/C++ - Module 01/ex05/Makefile
+++ b/C++ - Module 01/ex05/Makefile
@@ -1,6 +1,6 @@
-CC = c++
+CXX = c++
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 NAME = Harl
 
@@ -8,12 +8,11 @@ SRC = main.cpp Harl.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
+
 $(NAME) : $(OBJ)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJ)
+	$(CXX) $(OBJ) -o $(NAME)
 
-all : fclean 
-
-clean :
+clean : 
 	rm -f $(OBJ)
 
 fclean : clean
