--- a/C++ - Module 01/ex06/Makefile
+++ b/C++ - Module 01/ex06/Makefile
@@ -1,19 +1,18 @@
-CC = c++
+CXX = c++
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-NAME = harlFilter
+NAME = Harl
 
-SRC = main.cpp Harl.cpp
+SRC = main.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
+
 $(NAME) : $(OBJ)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJ)
+	$(CXX) $(OBJ) -o $(NAME)
 
-all : fclean 
-
-clean :
+clean : 
 	rm -f $(OBJ)
 
 fclean : clean
